...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.25"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
...
        android:inputType="text"
        android:ems="15"/>

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        app:endIconMode="password_toggle"
        app:hintAnimationEnabled="true"
        app:boxCornerRadiusBottomEnd="20dp"
        android:hint="Password"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:helperText="Required!"
        app:helperTextTextColor="#d6421b"
        app:counterEnabled="true"
...

        app:layout_constraintTop_toBottomOf="@+id/regName" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pass1"
            android:maxLength="22"
            android:inputType="textPassword"
            android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regCorfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="Comfirm Password"
...

        app:layout_constraintTop_toBottomOf="@+id/regPassword" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/confirm"
            android:maxLength="22"
            android:inputType="textPassword"
            android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="Phone"
...
            android:inputType="number"
            android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="SIGN UP"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login here"
        app:layout_constraintWidth_percent=".8"
        android:textColor="#4D9CAE"
        app:layout_constraintBottom_toBottomOf="parent"
...
