...
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Age"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:id="@+id/edtAge"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="Name"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:layout_above="@+id/edtAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpdate"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:background="#265dc4"
        android:textColor="#ffffff"
        android:layout_below="@+id/edtAge"
        android:layout_alignParentLeft="true"
...
